--- a/index.html
+++ b/index.html
@@ -36,6 +36,6 @@
         </section>
     </main>
 
-    <script src="app.js" defer></script>
+    <script src="asd.js" defer></script>
 </body>
 </html>
